[project]
name = "bike-ai-route"
version = "0.1.0"
description = "BIKE LangGraph route planning worker"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.8.0",
    "pytest>=8.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = ["-p", "no:langsmith_plugin", "-s"]
pythonpath = ["."]
testpaths = ["tests"]
